BACKLOG-16374: Add new code-sign process step (#311)
* BACKLOG-16374: Add new code-sign process step

* BACKLOG-16374: Remove jahia-code-signing context refs

* BACKLOG-16374: Add jahia-modules-orb

* BACKLOG-16374: Add file pattern for code signing process

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   docker-tags-orb: jahia/docker-tags-orb@1.1.0
+  jahia-modules-orb: jahia/jahia-modules-orb@0.5.4
 
 # Pipeline parameter must be declared
 parameters:
@@ -87,15 +88,6 @@ jobs:
             echo "$DOCKERHUB_LOGIN"
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_LOGIN" --password-stdin
       - run:
-          name: Get the code signing certificate
-          command: |
-            CODE_SIGNING_CERTIFICATE_URL=$(echo $CODE_SIGNING_CERTIFICATE_ENCRYPTED_URL | sed -r 's/(.{64})/\1\n/g' | openssl enc -base64 -d -aes-256-cbc -nosalt -md md5 -pass pass:$CODE_SIGNING_CERTIFICATE_ENCRYPTION_PWD)
-            if [ ! -d /home/circleci/source/.codesign/ ]; then
-              mkdir /home/circleci/source/.codesign/
-            fi
-            CODE_SIGNING_CERTIFICATE_URL=${CODE_SIGNING_CERTIFICATE_URL%$'\r'}
-            curl ${CODE_SIGNING_CERTIFICATE_URL} --output /home/circleci/source/.codesign/jahia-code-signing-certificate.p12
-      - run:
           name: Store project version
           command: mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec > jahia.version
       - run:
@@ -118,7 +110,7 @@ jobs:
             - run:
                 name: mvn clean deploy
                 working_directory: ~/source
-                command: mvn -s .circleci/.circleci.settings.xml -U -e -Dparent.tag=`cat parent.tag` -Dimage.tag=`cat image.tag` clean deploy -Pdocker,installer,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
+                command: mvn -s .circleci/.circleci.settings.xml -U -e -Dparent.tag=`cat parent.tag` -Dimage.tag=`cat image.tag` clean deploy -Pdocker,installer,windows-installer
             - docker-tags-orb/docker-tags:
                 version: "parent.tag"
                 repo: "jahia-opencore-dev"
@@ -132,7 +124,7 @@ jobs:
           steps:
             - run:
                 name: mvn clean install
-                command: mvn -s .circleci/.circleci.settings.xml -U -e -Dparent.tag=`cat parent.tag` -Dimage.tag=`cat image.tag` clean install -Pdocker,installer,sign-installer-jar,windows-installer,sign-installer-exe -Djahia.sign.keystore=/home/circleci/source/.codesign/jahia-code-signing-certificate.p12 -Djahia.sign.storepass=$CODE_SIGNING_PWD
+                command: mvn -s .circleci/.circleci.settings.xml -U -e -Dparent.tag=`cat parent.tag` -Dimage.tag=`cat image.tag` clean install -Pdocker,installer,windows-installer
             - run:
                 # This is only done on PR, as master is pushed with mvn deploy
                 name: Push PR Docker image
@@ -382,6 +374,26 @@ jobs:
                     --header 'content-type:application/json' \
                     --data '{ "parameters":{"run_core_code_change":true, "run_pull_request":true, "PARENT_IMAGE_TAG":"'"`cat image.tag`"'", "JAHIA_PRIVATE_SHA1":"<< pipeline.parameters.JAHIA_PRIVATE_SHA1 >>", "JAHIA_PACK_PRIVATE_SHA1":"'"$CIRCLE_SHA1"'"}, "branch":"'"$BRANCH"'" }'
 
+  code-sign:
+    <<: *workdir
+    docker:
+      - image: cimg/openjdk:11.0-node
+    resource_class: large
+    steps:
+      - *attach-workspace
+      - add_ssh_keys:
+          fingerprints:
+            - "f4:0e:08:4c:00:5d:d8:e6:74:d5:0d:4f:62:fe:e5:02"
+      - jahia-modules-orb/code-signer:
+          installer_dir: "~/source/jahia-installer-package/target"
+          file_pattern: "Jahia-*Distribution*"
+      - store_artifacts:
+          path: /tmp/signed-installers
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - source/jahia-installer-package/target
+
 workflows:
   core_triggered:
     when: << pipeline.parameters.run_core_code_change >>
@@ -392,14 +404,19 @@ workflows:
           name: Build Jahia Pack for << pipeline.parameters.PARENT_IMAGE_TAG >> core branch
           context:
             - QA_ENVIRONMENT
-            - jahia-code-signing
           requires:
             - Triggered build Checkout
+      - code-sign:
+          name: Sign installer files
+          requires:
+            - Build Jahia Pack for << pipeline.parameters.PARENT_IMAGE_TAG >> core branch
+          context:
+            - code-signing-orb
       - integration_tests:
           name: Integration tests
           context: QA_ENVIRONMENT
           requires:
-            - Build Jahia Pack for << pipeline.parameters.PARENT_IMAGE_TAG >> core branch
+            - Sign installer files
       - trigger_ee_build:
           name: Trigger build of jahia-ee for core PR
           context: QA_ENVIRONMENT
@@ -418,19 +435,25 @@ workflows:
           name: PR Build Jahia Pack
           context:
             - QA_ENVIRONMENT
-            - jahia-code-signing
           requires:
             - PR Checkout
+      - code-sign:
+          name: Sign installer files
+          requires:
+            - PR Build Jahia Pack
+          context:
+            - code-signing-orb
       - integration_tests:
           name: Integration tests
           context: QA_ENVIRONMENT
           requires:
-            - PR Build Jahia Pack
+            - Sign installer files
       - sonar:
           name: PR Sonar analysis of the pull request
           context: QA_ENVIRONMENT
           requires:
             - PR Build Jahia Pack
+  
   on-code-change:
     when:
       and:
@@ -448,14 +471,19 @@ workflows:
           name: Build Jahia Pack
           context:
             - QA_ENVIRONMENT
-            - jahia-code-signing
           requires:
             - checkout
+      - code-sign:
+          name: Sign installer files
+          requires:
+            - Build Jahia Pack
+          context:
+            - code-signing-orb
       - integration_tests:
           name: Integration tests
           context: QA_ENVIRONMENT
           requires:
-            - Build Jahia Pack
+            - Sign installer files
       - sonar:
           name: Sonar analysis
           context: QA_ENVIRONMENT
@@ -483,7 +511,6 @@ workflows:
           name: Scheduled build
           context:
             - QA_ENVIRONMENT
-            - jahia-code-signing
           requires:
             - Scheduled checkout
 #      - integration_tests:
