BACKLOG-16374 - Add code sign step for scheduled build (#316)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -513,6 +513,12 @@ workflows:
             - QA_ENVIRONMENT
           requires:
             - Scheduled checkout
+      - code-sign:
+          name: Sign installer files
+          requires:
+            - Scheduled build
+          context:
+            - code-signing-orb
 #      - integration_tests:
 #          name: Scheduled integration tests
 #          context: QA_ENVIRONMENT
