BACKLOG-16170: Fix `org.jahia.configuration.configurators` dependency classifier (#321)
* Fix org.jahia.configuration.configurators dependency classifier

* Fix reference to configurators-standalone.jar to new  classifier

--- a/jahia-installer-package/pom.xml
+++ b/jahia-installer-package/pom.xml
@@ -67,7 +67,7 @@
             <groupId>org.jahia.configuration</groupId>
             <artifactId>configurators</artifactId>
             <version>${jahia.configurators.version}</version>
-            <classifier>standalone</classifier>
+            <classifier>build</classifier>
             <scope>runtime</scope>
         </dependency>
         <dependency>
