--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,7 +226,7 @@ workflows:
               only:
                 - master
                 - /feature-.*/
-                - /JAHIA-[0-9]-[0-9]-[0-9]-X-BRANCH/
+                - /JAHIA-[0-9]+-[X0-9]+-[X0-9]+-X-BRANCH/
       - build:
           name: Build Jahia Pack
           is_pull_request: false
