--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -467,7 +467,7 @@ workflows:
               only:
                 - master
                 - /feature-.*/
-                - /JAHIA-[0-9]-[0-9]-[0-9]-X-BRANCH/
+                - /JAHIA-[0-9]+-[X0-9]+-[X0-9]+-X-BRANCH/
       - build:
           name: Build Jahia Pack
           context:
