--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,7 +190,7 @@ jobs:
           command: curl -X POST --url 'https://circleci.com/api/v2/project/gh/Jahia/jahia-ee/pipeline'
             --header 'circle-token:'"$CIRCLECI_PIPELINE_LAUNCH_TOKEN"''
             --header 'content-type:application/json'
-            --data '{ "branch":"'"$CIRCLE_BRANCH"'" }'
+            --data '{ "branch":"'"$CIRCLE_BRANCH"'", "parameters":{ "is_triggered":true } }'
 
 workflows:
   # This one is run only when triggered with the API, using a GitHub action
