--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>macros</artifactId>
-            <version>7.1.2</version>
+            <version>7.1.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
