--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  jahia-modules-orb: jahia/jahia-modules-orb@0.5.4
+  jahia-modules-orb: jahia/jahia-modules-orb@0.7.5
 
 # Pipeline parameter must be declared
 parameters:
@@ -20,6 +20,9 @@ parameters:
   JAHIA_LATEST_MAINTENANCE_BRANCH:
     type: string
     default: "JAHIA-7-3-X-X-BRANCH"
+  SSH_KEY_FINGERPRINT:
+    type: string
+    default: "f4:0e:08:4c:00:5d:d8:e6:74:d5:0d:4f:62:fe:e5:02"
 
 commands:
   generate_cachekey_seed:
@@ -109,10 +112,8 @@ jobs:
     resource_class: large
     steps:
       - *attach-workspace
-      - add_ssh_keys:
-          fingerprints:
-            - "f4:0e:08:4c:00:5d:d8:e6:74:d5:0d:4f:62:fe:e5:02"
       - jahia-modules-orb/code-signer:
+          ssh_key_fingerprint: << pipeline.parameters.SSH_KEY_FINGERPRINT >>
           installer_dir: "~/source/package/jahia-installer-package/target"
           file_pattern: "Jahia-*Distribution*"
       - store_artifacts:
