--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   docker-tags-orb: jahia/docker-tags-orb@1.1.0
-  jahia-modules-orb: jahia/jahia-modules-orb@0.8.4
+  jahia-modules-orb: jahia/jahia-modules-orb@0.8.5
 
 # Pipeline parameter must be declared
 parameters:
@@ -395,18 +395,10 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-# START INFRA-2050 - Temporarily disabled automated signature          
-#       - jahia-modules-orb/code-signer:
-#           ssh_key_fingerprint: << pipeline.parameters.SSH_KEY_FINGERPRINT >>
-#           installer_dir: "~/source/jahia-installer-package/target"
-#           file_pattern: "Jahia-*Distribution*"
-      - run:
-          name: Bypass the signature process and stored unsigned artifacts
-          command: |
-            mkdir -p /tmp/signed-installers
-            cp ~/source/jahia-installer-package/target/*.jar /tmp/signed-installers/
-            cp ~/source/jahia-installer-package/target/*.exe /tmp/signed-installers/
-# END INFRA-2050
+      - jahia-modules-orb/code-signer:
+          ssh_key_fingerprint: << pipeline.parameters.SSH_KEY_FINGERPRINT >>
+          installer_dir: "~/source/jahia-installer-package/target"
+          file_pattern: "Jahia-*Distribution*"
       - store_artifacts:
           path: /tmp/signed-installers
 
