QA-13624: Bump news module version to 3.4.0-SN

--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>news</artifactId>
-            <version>3.3.0</version>
+            <version>3.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
