--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-core</artifactId>
-            <version>1.0.4</version>
+            <version>1.0.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
