--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.7.1-jahia4</version>
+            <version>4.17.1-jahia7.3-2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
