BACKLOG-16461: use jahia-ui-root 1.5.0-SNASPHOT (#388)

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-ui-root</artifactId>
-            <version>1.4.0</version>
+            <version>1.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
