--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -310,7 +310,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>4.0.0</version>
+            <version>4.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
