--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-user-entries</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -104,13 +104,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-category-manager</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-repository-explorer</artifactId>
-            <version>1.2.0</version>
+            <version>1.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
