--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-editor</artifactId>
-            <version>3.4.0</version>
+            <version>3.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.9.0</version>
+            <version>2.10.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
