--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -273,7 +273,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>3.2.0</version>
+            <version>3.3.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
