--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-page-composer</artifactId>
-            <version>1.6.0</version>
+            <version>1.7.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
