--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -14,13 +14,14 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
         <groupId>org.jahia.packages</groupId>
         <artifactId>jahia-packages-parent</artifactId>
         <version>8.1.2.0-SNAPSHOT</version>
-        <relativePath />
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
@@ -168,16 +169,16 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-           <groupId>org.jahia.modules</groupId>
-           <artifactId>external-provider-users-groups</artifactId>
-           <version>2.1.0</version>
-           <scope>runtime</scope>
-       </dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>external-provider-users-groups</artifactId>
+            <version>2.1.0</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
             <version>4.3.0</version>
-       </dependency>
+        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>facets</artifactId>
@@ -328,7 +329,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sdl-generator-tools</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
