--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -188,7 +188,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.10.0</version>
+            <version>2.11.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
