--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>digitall</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
