--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-core</artifactId>
-            <version>2.3.0</version>
+            <version>2.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
