--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-administration</artifactId>
-            <version>1.5.0</version>
+            <version>1.6.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-page-composer</artifactId>
-            <version>1.7.0</version>
+            <version>1.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-editor</artifactId>
-            <version>4.0.0</version>
+            <version>4.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>app-shell</artifactId>
-            <version>2.6.0</version>
+            <version>2.7.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
