--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.12.0</version>
+            <version>2.13.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -273,7 +273,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>3.3.0</version>
+            <version>3.4.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
