--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.17.1-jahia8-2</version>
+            <version>4.19.1-jahia8-2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
