--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -200,7 +200,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-users-groups</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
