--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -382,7 +382,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>personal-api-tokens</artifactId>
-            <version>1.2.0</version>
+            <version>1.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
